# cohle

./: Cargo.toml  flake.nix  readme.md
assets/: image.txt  image_0.txt  image_1.txt  quotes.txt
src/: assets.rs  error.rs  main.rs  parse.rs  print.rs  process.rs
