[package]
name = "cohle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
colored = "2.1.0"
fastrand = "2.1.1"
textwrap = { version = "0.16.1", features = ["terminal_size"] }
